--- a/README
+++ b/README
@@ -14,8 +14,8 @@ Here is a link to the BitcoinTalk.org forum topic discussing this project:
 https://bitcointalk.org/index.php?topic=43496.0
 
 
-Please send DONATIONS for this project to Bitcoin Address: 
-1NiNja1bUmhSoTXozBRBEtR8LeF9TGbZBN
+Please send DONATIONS for this project to Litecoin Address: 
+LMarvage5Xy6qT4Ldp2pJKSh1iHE4rDYg7
 
 
 END USER NOTES: 
